--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -334,10 +334,11 @@
                                     Activity Log
                                 </a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
-                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Logout
-                                </a>
+                                
+                                <%= link_to destroy_user_session_path, method: :delete, html_options: {class: "dropdown-item"}  do %>
+                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400" ></i>
+                                    LogOut
+                                <%end%>
                             </div>
                         </li>
 
