--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -15,6 +15,7 @@
             <th>Nombre </th>
             <th>Dirección </th>
             <th>Teléfono</th>
+            <th>Acciones</th>
         </tr>
         </thead>
         <tbody>
