--- a/app/views/suppliers/update.js.erb
+++ b/app/views/suppliers/update.js.erb
@@ -1,4 +1,5 @@
 $('#modalProveedores').modal('toggle');
 $('#proveedor_<%= @proveedor.id %>').replaceWith(
-    '<tr id="proveedor_<%= @proveedor.id %>" ><td><%= @proveedor.nombre %></td><td><%= @proveedor.direccion %></td><td><%= @proveedor.direccion %></td><td><%= link_to 'editar', edit_supplier_path(@proveedor), html_options = {class: "btn btn-info btn-xs", remote: true} %> <%= link_to "Borrar", @proveedor, remote: true, method: :delete, data: { confirm: "¿Borrar proveedor: #{@proveedor.nombre}?"}, class: "btn btn-danger btn-xs" %></td></tr>'
+    '<tr id="proveedor_<%= @proveedor.id %>" ><td><%= @proveedor.nombre %></td><td><%= @proveedor.direccion %></td><td><%= @proveedor.telefono %></td><td><%= link_to 'editar', edit_supplier_path(@proveedor), html_options = {class: "btn btn-info btn-xs", remote: true} %> <%= link_to "Borrar", @proveedor, remote: true, method: :delete, data: { confirm: "¿Borrar proveedor: #{@proveedor.nombre}?"}, class: "btn btn-danger btn-xs" %></td></tr>'
 );
+
